--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "calculator-alimente",
-  "version": "0.1.0",
+  "version": "1.1.2",
   "private": true,
   "homepage": "https://oscicen.github.io/calculator-alimente",
   "dependencies": {
     "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.1.3"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
